Bug 34450 - Weborder_mobile: Combo > Quantity for product is cut off on Customize screen in Firefox

--- a/skins/weborder_mobile/css/product_sets.css
+++ b/skins/weborder_mobile/css/product_sets.css
@@ -52,8 +52,8 @@
 
 .product_set_list .combo_item select {
     width: auto;
-    text-indent: 0em;
-    padding: 0px 1.8em 0px 0.5em;
+    text-indent: 0;
+    padding: 0 2em 0 0.5em;
 }
 
 @-moz-document url-prefix() {
